tests/NormalTests/paczka1/fuzzy1/12707257.err
Error in line 4: pb0cm7v5f S245 236,2
Error in line 6: pb0cm7v5f A177 12,3
Error in line 7: S245 A472 49,3
Error in line 15: 1mTg S245 9,5
Error in line 19: pyQxxmC4 A472 154,8
